# compiz

./: .gitignore  0001-Don-t-increase-leave-pendingMaps-at-a-non-zero-numbe.patch  CMakeLists.txt  Doxyfile  NEWS  compiz-composite.pc.in  compiz-opengl.pc.in  compiz-scale.pc.in  config.h.cmake.in  config.h.core.in  configure.ac
gtk/: CMakeLists.txt  config.h.gtk.in
gtk/gnome/: 50-compiz-desktop-key.xml.in  50-compiz-key.xml.in  CMakeLists.txt  compiz.desktop.in
gtk/window-decorator/: CMakeLists.txt  actionmenu.c  blurprops.c  cairo.c  decorator.c  decorprops.c  events.c  forcequit.c  frames.c  gdk.c  gtk-window-decorator.c  gtk-window-decorator.h  metacity.c  settings.c  style.c  switcher.c  tooltip.c  util.c  wnck.c
include/core/: CMakeLists.txt  action.h  atoms.h  core.h  icon.h  match.h  metadata.h  modifierhandler.h  option.h  option.h~  output.h  plugin.h  plugin.h~  pluginclasses.h  pluginclasshandler.h  point.h  point.h~  privatehandler.h  privates.h  rect.h  rect.h~  region.h  region.h~  screen.h  serialization.h  session.h  size.h  size.h~  timer.h  window.h  window.h~  wrapsystem.h
kde/window-decorator-kde4/: CMakeLists.txt  decorator.cpp  decorator.h  main.cpp  switcher.cpp  switcher.h  utils.cpp  utils.h  window.cpp  window.h
metadata/: CMakeLists.txt  Makefile.am  blur.xml.in  composite.xml.in  core.xml.in  decor.xml.in  fade.xml.in  imgsvg.xml.in  kcfg.xslt  move.xml.in  obs.xml.in  opengl.xml.in  place.xml.in  resize.xml.in  scale.xml.in  schemas.xslt  screenshot.xml.in  switcher.xml.in  water.xml.in  zoom.xml.in
plugins/: CMakeLists.txt  Makefile.am  blur.cpp  blur.h  commands.cpp  copytex.cpp  copytex.h  decor.cpp  decor.h  decoration.cpp  fade.cpp  fade.h  glib.cpp  gnomecompat.cpp  imgpng.cpp  imgpng.h  imgsvg.cpp  imgsvg.h  ini.cpp  ini.h  inotify.cpp  inotify.h  move.cpp  move.h  obs.h  place.cpp  place.h  regex.cpp  regexplugin.h  resize.cpp  resize.h  switcher.cpp  switcher.h  water.cpp  water.h  zoom.cpp  zoom.h
plugins/annotate/: annotate.xml.in
plugins/annotate/src/: annotate.cpp  annotate.h
plugins/bailer/: CMakeLists.txt  bailer.xml.in
plugins/bailer/src/: bailer.cpp  bailer.h
plugins/blur/: CMakeLists.txt  blur.xml.in
plugins/blur/src/: blur.cpp  blur.h
plugins/clone/: clone.xml.in
plugins/clone/src/: clone.cpp
plugins/commands/: commands.xml.in
plugins/commands/src/: commands.cpp  commands.h
plugins/compiztoolbox/: CMakeLists.txt  compiz-compiztoolbox.pc.in  compiztoolbox.xml.in
plugins/compiztoolbox/src/: compiztoolbox.cpp
plugins/composite/: CMakeLists.txt  Makefile.am  composite.cpp  composite.xml.in  display.cpp  privates.h  screen.cpp  window.cpp
plugins/composite/src/: privates.h  screen.cpp  window.cpp
plugins/copytex/: copytex.xml.in
plugins/copytex/src/: copytex.cpp  copytex.h
plugins/cube/: cube.xml.in
plugins/cube/src/: cube.cpp  privates.h
plugins/dbus/: CMakeLists.txt  dbus.xml.in
plugins/dbus/src/: dbus.cpp  dbus.h
plugins/debugspew/: CMakeLists.txt  debugspew.xml.in
plugins/debugspew/src/: debugspew.cpp  debugspew.h
plugins/decor/: CMakeLists.txt  decor.xml.in
plugins/decor/src/: decor.cpp  decor.h
plugins/detection/: CMakeLists.txt  detection.xml.in
plugins/detection/src/: detection.cpp  detection.h
plugins/fade/: fade.xml.in
plugins/fade/src/: fade.cpp  fade.h
plugins/glib/: CMakeLists.txt  glib.xml.in
plugins/glib/src/: glib.cpp  private.h
plugins/gnomecompat/: gnomecompat.xml.in
plugins/gnomecompat/src/: gnomecompat.cpp  gnomecompat.h
plugins/grid/: grid.xml.in
plugins/grid/src/: grid.cpp
plugins/imgpng/: imgpng.xml.in
plugins/imgpng/src/: imgpng.cpp
plugins/imgsvg/: imgsvg.xml.in
plugins/imgsvg/src/: imgsvg.cpp  imgsvg.h
plugins/ini/: ini.xml.in
plugins/ini/src/: ini.cpp  ini.h
plugins/inotify/: inotify.xml.in
plugins/inotify/src/: inotify.cpp
plugins/kde/: CMakeLists.txt  kde.xml.in
plugins/kde/src/: dispatcher.cpp  kde.cpp  kde.h
plugins/move/: move.xml.in
plugins/move/src/: move.cpp  move.h
plugins/obs/: obs.xml.in
plugins/obs/src/: obs.cpp  obs.h
plugins/opengl/: CMakeLists.txt  Makefile.am  display.cpp  fragment.cpp  icon.cpp  matrix.cpp  opengl.cpp  opengl.xml.in  paint.cpp  privatefragment.h  privates.h  privatetexture.h  screen.cpp  texture.cpp  vector.cpp  window.cpp
plugins/opengl/src/: fragment.cpp  matrix.cpp  opengl.cpp  paint.cpp  privates.h  privatetexture.h  screen.cpp  texture.cpp  vector.cpp  window.cpp
plugins/place/: place.xml.in
plugins/place/src/: place.cpp  place.h
plugins/regex/: regex.xml.in
plugins/regex/src/: regex.cpp  regexplugin.h
plugins/resize/: CMakeLists.txt  resize.xml.in
plugins/resize/src/: resize.cpp  resize.h
plugins/rotate/: rotate.xml.in
plugins/rotate/src/: rotate.cpp
plugins/scale/: CMakeLists.txt  privates.h  scale.cpp  scale.xml.in
plugins/scale/src/: privates.h  scale.cpp
plugins/screenshot/: CMakeLists.txt  screenshot.xml.in
plugins/screenshot/src/: screenshot.cpp  screenshot.h
plugins/switcher/: CMakeLists.txt  switcher.xml.in
plugins/switcher/src/: switcher.cpp  switcher.h
plugins/water/: water.xml.in
plugins/water/src/: water.cpp  water.h
plugins/wobbly/src/: wobbly.cpp  wobbly.h
plugins/zoom/: zoom.xml.in
plugins/zoom/src/: zoom.cpp  zoom.h
src/: CMakeLists.txt  Makefile.am  action.cpp  actions.cpp  atoms.cpp  core.cpp  cursor.cpp  display.cpp  event.cpp  eventsource.cpp  fragment.cpp  icon.cpp  main.cpp  match.cpp  matrix.cpp  metadata.cpp  object.cpp  option.cpp  output.cpp  paint.cpp  plugin.cpp  pluginclasses.cpp  point.cpp  privateaction.h  privatecore.h  privatedisplay.h  privatefragment.h  privatematch.h  privateobject.h  privateoption.h  privateregion.h  privates.cpp  privatescreen.h  privatetexture.h  privatewindow.h  propertywriter.cpp  rect.cpp  region.cpp  screen.cpp  session.cpp  (+7 more)
unity/unity_window_decorator/: CMakeLists.txt  INSTALL
unity/unity_window_decorator/src/: CMakeLists.txt  actionmenu.c  cairo.c  config.h.gtk.in  decorator.c  events.c  gtk-window-decorator.c  gtk-window-decorator.h  metacity.c  settings.c  (+4 more)
(+72 files in other folders)
